--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,21 @@
         font-family: 'Lexend', sans-serif;
     }
 }
+/* Hide scrollbar */
+@layer utilities {
+    @layer responsive {
+
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+
+        /* Hide scrollbar for IE, Edge and Firefox */
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            /* IE and Edge */
+            scrollbar-width: none;
+            /* Firefox */
+        }
+    }
+}
