--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,22 @@
         }
     }
 }
+/* Custom scrolls */
+#slider::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+#slider::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+#slider::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
+}
